// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Atoms/Checkbox Checked 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "background": "",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
      "padding": "2em",
    }
  }
>
  <input
    aria-label="check"
    checked={true}
    className="checkbox"
    id="check"
    onChange={[Function]}
    type="checkbox"
  />
</div>
`;

exports[`Storyshots Atoms/Checkbox Default 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "background": "",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
      "padding": "2em",
    }
  }
>
  <input
    aria-label="check"
    checked={false}
    className="checkbox"
    id="check"
    onChange={[Function]}
    type="checkbox"
  />
</div>
`;
